# llm-apps

./: .gitignore  README.md  pyproject.toml
blog_to_podcast_ai_agent/: app.py  config.py  graph.py  logging_setup.py  main.py  nodes.py  schemas.py
speech_to_feedback_ai_agent/: Speech_to_Feedback_AI_Agent.drawio  config.py  graph.py  main.py  mermaid.ipynb  nodes.py  schemas.py  utils.py
